--- a/index.html
+++ b/index.html
@@ -17,23 +17,18 @@
 
         <ul>
            <li>
-            <img src="images/whatsapp.png" alt="WhatsApp 1 Vitaly Almeida">
-            <a href="https://api.whatsapp.com/send/?phone=553335111456&text&type=phone_number&app_absent=0">WhatsApp</a>
+            <a href="https://api.whatsapp.com/send/?phone=553335111456&text&type=phone_number&app_absent=0">Whatsapp</a>
            </li>
            <li>
-            <img src="images/whatsapp.png" alt="WhatsApp 2 Vitaly Almeida">
-            <a href="https://api.whatsapp.com/send/?phone=553335111456&text&type=phone_number&app_absent=0">WhatsApp</a>
+            <a href="https://api.whatsapp.com/send/?phone=553335111456&text&type=phone_number&app_absent=0">Whatsapp</a>
            </li>
            <li>
-            <img src="images/programacao.png" alt="Site Vitaly Almeida">
             <a href="https://www.vitalyalmeidaimobiliaria.srv.br">Site</a>
            </li>
            <li>
-            <img src="images/facebook.png" alt="Facebook Vitaly Almeida">
             <a href="https://www.facebook.com/profile.php?id=100009906151812">Facebook</a>
            </li>
            <li>
-            <img src="images/instagram.png" alt="Instagram">
             <a href="https://www.instagram.com/vitalyalmeida/">Instagram</a>
            </li>
         </ul>
