--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <ul>
            <li>
-            <a href="https://api.whatsapp.com/send/?phone=553335111456&text&type=phone_number&app_absent=0">Whatsapp</a>
+            <a href="https://api.whatsapp.com/send?phone=5533991351296&text=Ol%C3%A1.">Whatsapp</a>
            </li>
            <li>
             <a href="https://api.whatsapp.com/send/?phone=553335111456&text&type=phone_number&app_absent=0">Whatsapp</a>
